Login and registration work now, Upload to firebase works as well however it does not get stored in storage for some reason D;

--- a/AC3.2-Final/AC3.2-Final/Base.lproj/Main.storyboard
+++ b/AC3.2-Final/AC3.2-Final/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-square" translatesAutoresizingMaskIntoConstraints="NO" id="3MB-Gh-1q5">
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-square" translatesAutoresizingMaskIntoConstraints="NO" id="3MB-Gh-1q5">
                                 <rect key="frame" x="16" y="20" width="343" height="420"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add a descripion..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uW2-b6-6o1">
